--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,12 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	runtimeOnly 'com.mysql:mysql-connector-j'
+	//runtimeOnly -> implementation // https://web2eye.tistory.com/250
+	implementation 'com.mysql:mysql-connector-j'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	// p.137 DataSource 관련 https://mvnrepository.com/artifact/org.springframework/spring-jdbc
+	implementation 'org.springframework:spring-jdbc:5.3.28'
 }
 
 tasks.named('test') {
