--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.boot:spring-boot-starter-aop'
 	// p.137 DataSource 관련 https://mvnrepository.com/artifact/org.springframework/spring-jdbc
 	implementation 'org.springframework:spring-jdbc:5.3.28'
 	// 메일 관련 p.386
