p.598 7-45~47(7-48,49 생략) 스프링 OXM 추상화 Unmarshaller 테스트
ㅁ의존성 추가 springframework:oxm
ㅁ테스트 코드 및 테스트용 빈 설정 xml 작성
*** 스프링 5.2부터 Castor 지원 종료 - 7-48,49 생략

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,10 @@ dependencies {
 	// 		=> 이건 이미 외부 라이브러리 있어서 가져오지 않음 - org.springframework:spring-context-support:5.3.28
 	// https://mvnrepository.com/artifact/org.springframework/spring-context-support
 	// implementation 'org.springframework:spring-context-support:~~~~~~RELEASE'
+
+	// OXM 서비스 추상화 관련 p.600
+	// https://mvnrepository.com/artifact/org.springframework/spring-oxm
+	implementation group: 'org.springframework', name: 'spring-oxm', version: '5.3.28'
 }
 
 tasks.named('test') {
