실행 상황 다시 확인 driverClass 끝에 .class는 없어야 함
* properties 파일이든 yml 파일이든 driverClass 끝에 .class는 없어야할 듯함
*** yml  파일에서 db.을 앞에 붙이면 제대로 못 붙러오는 현상 확인함
**** yml 파일에서 이상하게 username으로 입력한 문자열이 아니라 상관 없는 문자열을 갖고오는 이상한 현상 확인함

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
-db.driverClass: com.mysql.cj.jdbc.Driver.class
+db.driverClass: com.mysql.cj.jdbc.Driver
 db.url: jdbc:mysql://localhost/testdb?characterEncoding=UTF-8
 db.username: spring
 db.password: book
