--- a/src/main/resources/database.yml
+++ b/src/main/resources/database.yml
@@ -1,5 +1,5 @@
 db:
-  driverClass: com.mysql.cj.jdbc.Driver.class
+  driverClass: com.mysql.cj.jdbc.Driver
   url: jdbc:mysql://localhost/testdb?characterEncoding=UTF-8
-  username: spring
+  username: "spring"
   password: book
